# uac-enigma

./: .gitignore  CMakeLists.txt  README.md  make.bat
assets/: payload.txt  run.sh  start.vbs
src/: CMakeLists.txt  main.c
src/rdi/: ReflectiveLoader.c
src/resources/: resource.rc
